--- a/trunk/diamandas/wiki/templates/wiki/punbb/indexPage.html
+++ b/trunk/diamandas/wiki/templates/wiki/punbb/indexPage.html
@@ -24,5 +24,5 @@
 	{{ page.text|cbc }}
 {% endblock %}
 
-{% block title %}{{ page.title }}{% endblock %}
-{% block description %}{{ page.description }}{% endblock %}
+{% block title %}{{ page.title|escape }}{% endblock %}
+{% block description %}{{ page.description|escape }}{% endblock %}
