--- a/trunk/diamandas/wiki/templates/wiki/punbb/page.html
+++ b/trunk/diamandas/wiki/templates/wiki/punbb/page.html
@@ -22,8 +22,8 @@
 {% block content %}
 {{ page.text|cbc }}
 <hr />
-<div style="text-align:center;"><b>{% trans "Page Added" %}:</b> {{ page.creation_date }} | <b>{% trans "Page Last Modification" %}</b>: {{ page.creation_date }} | <b>{% trans "Changes" %}</b>: {{ page.changes }}</div>
+<div style="text-align:center;"><b>{% trans "Page Added" %}:</b> {{ page.creation_date }} | <b>{% trans "Page Last Modification" %}</b>: {{ page.creation_date }} | <b>{% trans "Changes" %}</b>: {{ page.changes|escape }}</div>
 {% endblock %}
 
-{% block title %}{{ page.title }}{% endblock %}
-{% block description %}{{ page.description }}{% endblock %}
+{% block title %}{{ page.title|escape }}{% endblock %}
+{% block description %}{{ page.description|escape }}{% endblock %}
